--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=3064 next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "PORT=3064 next start"
   },
   "dependencies": {
     "@react-three/fiber": "^8.2.1",
